# NCursesUI

./: .gitignore  CMakeLists.txt  Makefile
example/: CMakeLists.txt
example/box/: CMakeLists.txt  box  box.cpp
example/label/: CMakeLists.txt  label  label.cpp
include/: box.hpp  event.hpp  event_handler.hpp  key_down_event.hpp  label.hpp  layout.hpp  menu.hpp  menu_item.hpp  ncurses_app.hpp  signal.hpp  signal_priv.hpp  widget.hpp
src/: CMakeLists.txt  box.cpp  event.cpp  event_handler.cpp  key_down_event.cpp  label.cpp  layout.cpp  menu.cpp  menu_item.cpp  ncurses_app.cpp  widget.cpp
